--- a/No.html
+++ b/No.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 		<html dir="rtl">
 			<head>
-					<title>معرفه المزيد</title>
+					<title>flowers</title>
+				<meta charset="utf-8"/>
+					
 					<link rel="stylesheet" type="text/css" href="css/style.css">
 					<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 					<script type="text/javascript" src="js/jone.js"></script>
 				<style type="text/css">
 				 #aaa{
 									border: 4px outset red;
-									height: 190px;
-									width: 200px;
+									height: 170px;
+									width: 175px;
 									transition:1s;
 				}
 				/*=================================================*/
@@ -22,8 +24,8 @@
 
 				 #bbb{
 									border: 4px outset blue;
-									height: 190px;
-									width: 200px;
+									height: 170px;
+									width: 175px;
 									transition:1s;
 				}
 				/*=================================================*/
@@ -37,8 +39,8 @@
 
 				#ccc{
 									border: 4px outset pink;
-									height: 190px;
-									width: 200px;
+									height: 170px;
+									width: 175px;
 									transition:1s;
 				}
 				/*=================================================*/
@@ -51,9 +53,9 @@
 				/*=================================================*/
 
 				#fff{
-									border: 4px outset pink;
-									height: 190px;
-									width: 200px;
+									border: 4px outset darkred;
+									height: 170px;
+									width: 175px;
 									transition:1s;
 				}
 				/*=================================================*/
@@ -68,8 +70,8 @@
 				#ttt{
 
 									border: 4px outset lime;
-									height: 190px;
-									width: 200px;
+									height: 170px;
+									width: 175px;
 									transition:1s;
 				}
 				/*=================================================*/
@@ -83,8 +85,8 @@
 
 				#zzz{
 								    border: 4px outset darkred;
-									height: 190px;
-									width: 200px;
+									height: 170px;
+									width: 175px;
 									transition:1s;
 				}
 				/*=================================================*/
@@ -98,8 +100,8 @@
 
 				#sss{
 								    border: 4px outset green;
-									height: 190px;
-									width: 191px;
+									height: 170px;
+									width: 175px;
 									transition:1s;
 				}
 				/*=================================================*/
