--- a/scearh.html
+++ b/scearh.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 		<html dir="rtl">
 				<head>
-						<title>flors</title>
+					<title>flowers</title>
+				<meta charset="utf-8"/>
+					
 						<link rel="stylesheet" type="text/css" href="css/style.css">
 						<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 						<script type="text/javascript" src="js/jone.js"></script>s
 					<style type="text/css">
-						 .eee{
+						.eee{
 							border: 5px outset red;
 							height:200px;
 							width:200px;
@@ -15,9 +17,9 @@
 						}
 						/*===================================================*/
 						.eee:hover{
-							     border: 7px inset pink;
+							border: 7px inset pink;
 							margin: 60px;
-								 box-shadow: 0 0 100px orange;	
+							box-shadow: 0 0 100px orange;	
 
 						}
 
@@ -26,19 +28,19 @@
 							font-family: fantasy;
 						}
 						/*===================================================*/
-										#pop{
-											border-top: 4px outset yellow;
-											border-left:4px inset orange;
-											border-bottom: 4px groove green;
-											border-right: 4px outset lime;
-											border-radius: 30px;
-											height: 85px;
-											width: 50%;
-											background-color: #Ffa;
+						#pop{
+							border-top: 4px outset yellow;
+							border-left:4px inset orange;
+							border-bottom: 4px groove green;
+							border-right: 4px outset lime;
+							border-radius: 30px;
+							height: 85px;
+							width: 50%;
+							background-color: #Ffa;
 						}
 						/*===================================================*/
 						.omar{
-							                font-size: 25px;
+							font-size: 25px;
 						}
 						/*===================================================*/
 						.omar:hover{
@@ -47,21 +49,25 @@
 						}
 						/*===================================================*/
 						#tyr{
-							                color:yellow ;
-											font-size: 20px;
-											border:8px outset purple;
-											background-color:purple;
-											transition:1s;
+							color:yellow ;
+							font-size: 20px;
+							border:8px outset purple;
+							background-color:purple;
+							transition:1s;
 						}
 						/*===================================================*/
 						#tyr:hover{
-											color:orange;
-											font-size: 20px;
-											border:9px outset purple;
-											background-color:purple;
+							color:orange;
+							font-size: 20px;
+							border:9px outset purple;
+							background-color:purple;
 
 						}
 						/*===================================================*/
+						body{
+						text-align: center;
+					}
+
 				</style>
 		</head>
 	<body>
