--- a/search.html
+++ b/search.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 	<html dir="rtl">
 				<head>
-	              	<title>flower</title>
+					<title>flowers</title>
+				<meta charset="utf-8"/>
+					
 									<link rel="stylesheet" type="text/css" href="css/style.css">
 									<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 									<script type="text/javascript" src="js/jone.js"></script>
@@ -82,6 +84,11 @@
 										font-family: fantasy;
 										text-align: center;
 									}
+									/*=================================================*/
+									body{
+						text-align: center;
+					}
+
 
  				            </style>
                 </head>
