--- a/زهور.html
+++ b/زهور.html
@@ -2,6 +2,8 @@
 		<html dir="rtl">
 			<head>
 					<title>flowers</title>
+				<meta charset="utf-8"/>
+					
 					<link rel="stylesheet" type="text/css" href="css/style.css">
 					<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 					<script type="text/javascript" src="js/jone.js"></script>
@@ -9,14 +11,16 @@
 					.yyy{
 						border: 5px outset orange;
 						height:200px;
-						width:200px;
+										width:200px;
 						transition:1s;
+						/*text-align: center;
+						line-height: 1000px;*/
 					}
 					/*=============================================*/
 					.yyy:hover{
-						     border: 7px inset green;
-							margin: 60px;
-							 box-shadow: 0 0 100px orange;	
+						border: 7px inset green;
+						margin: 60px;
+						box-shadow: 0 0 100px orange;	
 
 					}
 					/*=============================================*/
@@ -29,7 +33,7 @@
 					/*=============================================*/
 
 					.omar{
-						                font-size: 25px;
+						font-size: 25px;
 					}
 					/*=============================================*/
 
@@ -68,7 +72,9 @@
 
 					}
 					/*=============================================*/
-
+					body{
+						text-align: center;
+					}
 
 			</style>
 		</head>
@@ -147,8 +153,8 @@
 			<img class="yyy"src="img/25.jpg" >
 			<img class="yyy"src="img/26.jpeg" >
 			<img class="yyy"src="img/27.jpeg" >
-			<img class="yyy"src="img/28.bmp" >
-			<img class="yyy"src="img/29.bmp" >
+			<!-- <img class="yyy"src="img/28.bmp" >
+			<img class="yyy"src="img/29.bmp" > -->
 			<img class="yyy"src="img/30.jpeg" >
 			<img class="yyy"src="img/31.jpeg" >
 			<img class="yyy"src="img/32.jpeg" >
