--- a/عودة.html
+++ b/عودة.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 	<html dir="rtl">
 			<head>
-				<title>exams</title>
+				<title>زهور زهراء</title>
+				<meta charset="utf-8"/>
 				<link rel="stylesheet" type="text/css" href="css/style.css">
 				<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 				<script type="text/javascript" src="js/jone.js"></script>
@@ -18,14 +19,14 @@
 			#vall{
 								text-align: center;
 								line-height: 0px;
-								color:yellow;
+								color:red;
 								font-family:cursive;
 			}
 			/*==============================================*/
 			#aaa{
 								border: 5px outset red;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -46,11 +47,11 @@
 								transition:2s;
 			}
 			/*==============================================*/
-			#vall{
+			/*#vall{
 								text-align: center;
 								line-height:0px;
 								color: green;
-								font-family:fantasy;
+								/*font-family:fantasy;*/
 			}
 			/*==============================================*/
 			.qqq{
@@ -58,13 +59,13 @@
 								font-size: 17px;
 								border:8px outset pink;
 								background-color: pink;
-								margin-right: 35px;
+								/*margin-right: 35px;*/
 			}
 			/*==============================================*/
 			   #bbb{
 								border: 5px outset blue;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -76,8 +77,8 @@
 			/*==============================================*/
 			#ccc{
 								border: 5px outset pink;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -88,7 +89,7 @@
 			}
 			/*==============================================*/
 			input{
-								width: 250px;
+								width: 200px;
 								height: 30px;
 								border: 3px solid green;
 								color: red;
@@ -99,12 +100,13 @@
 			input:hover{
 								border:3px solid yellow;
 								box-shadow: 0 0 100px ;
+								margin: 3px;
 			}
 			/*==============================================*/
 			#fff{
-								border: 5px outset pink;
-								height: 190px;
-								width: 200px;
+								border: 5px outset darkred;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -123,8 +125,8 @@
 			#ttt{
 
 								border: 5px outset lime;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -137,8 +139,8 @@
 			#zzz{
 
 								border: 5px outset darkred;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -150,8 +152,8 @@
 			/*==============================================*/
 			#sss{
 								border: 5px outset green;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -189,7 +191,7 @@
 	<body>
 			<div id="top_message">
 				<p>
-								اذا اردت التواصل معنا فتصلوا بنا علي :01000200697 
+								اذا اردت التواصل معنا فتاصلوا بنا علي :01000200697 
 				<a href="No.html">
 								معرفة المزيد
 				</a>
@@ -204,7 +206,7 @@
 			<br>
 
 			<h1 id="vall">
-								واحة الورود
+								واحه الورود
 			</h1>
 
 			<!-- ============================================= -->
