--- a/ورود.html
+++ b/ورود.html
@@ -2,6 +2,8 @@
 		<html dir="rtl">
 				<head>
 					<title>flowers</title>
+				<meta charset="utf-8"/>
+					
 					<link rel="stylesheet" type="text/css" href="css/style.css">
 					<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 					<script type="text/javascript" src="js/jone.js"></script>
@@ -77,6 +79,9 @@
 						color: red;
 					}
 					/*=====================================================*/
+body{
+						text-align: center;
+					}
 
 				</style>
 		</head>
