--- a/etsl.html
+++ b/etsl.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 		<html dir="rtl">
 			<head>
-					<title>etsl bna</title>
+					<title>flowers</title>
+				<meta charset="utf-8"/>
 					<link rel="stylesheet" type="text/css" href="css/style.css">
 					<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 					<script type="text/javascript" src="js/jone.js"></script>
