--- a/index.html
+++ b/index.html
@@ -1,125 +1,12 @@
 <!DOCTYPE html>
-	<html dir="rtl" lang='ar'>
+	<html dir="rtl">
 			<head>
-				<title>exams</title>
-				
+				<title>زهور زهراء</title>
+				<meta charset="utf-8"/>
+				<link rel="stylesheet" type="text/css" href="css/style.css">
 				<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 				<script type="text/javascript" src="js/jone.js"></script>
 		<style type="text/css">
-#aaa{
-	border: 5px outset green;
-	height:200px;
-    width:200px;
-
-}
-/*=======================================*/
-.zahraa{
-	color:red ;
-	font-size: 17px;
-	border:8px outset pink;
-	background-color:pink;
-
-}
-/*=======================================*/
-
-#bbb{
-	border: 5px outset red;
-	height:200px;
-	width:200px;
-}
-/*=======================================*/
-
-#ccc{
-	border: 5px outset orange;
-	height:190px;
-	width:185px;
-}
-/*=======================================*/
-
-input{
-	width: 250px;
-	height: 30px;
-	border: 3px solid green;
-	color: red;
-}
-/*=======================================*/
-
-.qqq{
-	color:red ;
-	font-size: 17px;
-	border:8px outset pink;
-	background-color: pink;
-    }
-/*=======================================*/
-
-h1{
-	color:darkred;
-  }
-/*=======================================*/
-
-.sara{
-	height:190px;
-	width:150px;
-	border: 5px outset red;
-	margin: 30px;	
-     }
-/*=======================================*/
-
-#fff{
-	border: 5px outset orange;
-	height: 200px;
-	width: 200px;
-}
-/*=======================================*/
-
-.yyy{
-	border: 5px outset red;
-	height:190px;
-	width:170px;
-	margin: 30px;	
-    }
-/*=======================================*/
-
-b{
-	color: red;
- }
-/*=======================================*/
-
-.ooo{
-     border: 5px outset pink;
-	 height:190px;
-	 width:170px;
-	 margin: 30px;	
-    }
-/*=======================================*/
-
-#ddd{
-     color: hotpink;
-	}
-/*=======================================*/
-
-.www{
-     border: 5px outset red;
-	 height:190px;
-	 width:170px;
-	 margin: 30px;	
-
-     }
-/*=======================================*/
-
-.vvv{
-	border: 7px outset pink;
-	height:190px;
-	width:170px;
-	margin: 30px;	
-	}
-/*=======================================*/
-
-	img{
-		display: inline;
-	}
-/*=======================================*/
-	
 			.zahraa{
 								color:red ;
 								font-size: 17px;
@@ -132,14 +19,14 @@ b{
 			#vall{
 								text-align: center;
 								line-height: 0px;
-								color:pink;
+								color:red;
 								font-family:cursive;
 			}
 			/*==============================================*/
 			#aaa{
 								border: 5px outset red;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -160,11 +47,11 @@ b{
 								transition:2s;
 			}
 			/*==============================================*/
-			#vall{
+			/*#vall{
 								text-align: center;
 								line-height:0px;
 								color: green;
-								font-family:fantasy;
+								/*font-family:fantasy;*/
 			}
 			/*==============================================*/
 			.qqq{
@@ -172,13 +59,13 @@ b{
 								font-size: 17px;
 								border:8px outset pink;
 								background-color: pink;
-								margin-right: 35px;
+								/*margin-right: 35px;*/
 			}
 			/*==============================================*/
 			   #bbb{
 								border: 5px outset blue;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -190,8 +77,8 @@ b{
 			/*==============================================*/
 			#ccc{
 								border: 5px outset pink;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -202,7 +89,7 @@ b{
 			}
 			/*==============================================*/
 			input{
-								width: 250px;
+								width: 200px;
 								height: 30px;
 								border: 3px solid green;
 								color: red;
@@ -213,12 +100,13 @@ b{
 			input:hover{
 								border:3px solid yellow;
 								box-shadow: 0 0 100px ;
+								margin: 3px;
 			}
 			/*==============================================*/
 			#fff{
-								border: 5px outset pink;
-								height: 190px;
-								width: 200px;
+								border: 5px outset darkred;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -237,8 +125,8 @@ b{
 			#ttt{
 
 								border: 5px outset lime;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -251,8 +139,8 @@ b{
 			#zzz{
 
 								border: 5px outset darkred;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -264,8 +152,8 @@ b{
 			/*==============================================*/
 			#sss{
 								border: 5px outset green;
-								height: 190px;
-								width: 200px;
+								height: 170px;
+								width: 175px;
 								transition:1s;
 			}
 			/*==============================================*/
@@ -303,7 +191,7 @@ b{
 	<body>
 			<div id="top_message">
 				<p>
-								اذا اردت التواصل معنا فتصلوا بنا علي :01000200697 
+								اذا اردت التواصل معنا فتاصلوا بنا علي :01000200697 
 				<a href="No.html">
 								معرفة المزيد
 				</a>
@@ -318,7 +206,7 @@ b{
 			<br>
 
 			<h1 id="vall">
-								واحة الورود
+								واحه الورود
 			</h1>
 
 			<!-- ============================================= -->
