--- a/بحث.html
+++ b/بحث.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 		<html dir="rtl">
 			<head>
-					<title>owers</title>
+					<title>flowers</title>
+				<meta charset="utf-8"/>
+					
 					<link rel="stylesheet" type="text/css" href="css/style.css">
 					<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 					<script type="text/javascript" src="js/jone.js"></script>
@@ -67,6 +69,11 @@
 						text-align: center;
 						font-family: fantasy;
 					}
+					/*==================================================*/
+					body{
+						text-align: center;
+					}
+
 			</style>
 
 		</head>
